Design page d'accueil

--- a/presentation/templates/index.html
+++ b/presentation/templates/index.html
@@ -10,7 +10,31 @@
 </head>
 
 <body>
-    <h2>welcome to jill portfolio</h2>
+    <div class="bg-light">
+        <header class="header container">
+            <div class="logo">Onjatiana<span>.</span> </div>
+            <nav class="menu">
+                <a href="#" class="menu-item">home</a>
+                <a href="#" class="menu-item">portfolio</a>
+                <a href="#" class="menu-item">contact</a>
+            </nav>
+        </header>
+    </div>
+
+    <div class="banner container">
+        <div>
+            <p class="myName">
+                Hi, I'm Onjatiana
+            </p>
+            <p class="myDescription">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quod non ipsum nam cupiditate
+                architecto
+                necessitatibus quae optio blanditiis dignissimos reiciendis in adipisci delectus, at id magnam numquam
+                quaerat distinctio!
+            </p>
+            <button class="btn">contact me</button>
+        </div>
+    </div>
 </body>
 
 </html>
