--- a/static/app.css
+++ b/static/app.css
@@ -107,10 +107,6 @@ section {
     display: block;
 }
 
-body {
-    line-height: 1;
-}
-
 ol,
 ul {
     list-style: none;
@@ -132,4 +128,81 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+/* base */
+
+body {
+    font-family: cursive;
+    font-size: 16px;
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+}
+
+/* layout */
+.container {
+    max-width: 1150px;
+    margin: auto;
+}
+
+.bg-light {
+    background: rgb(249, 249, 249);
+
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    height: 75px;
+}
+
+.logo {
+    font-weight: 700;
+}
+
+.logo span {
+    color: chartreuse;
+}
+
+.menu {
+    margin-left: auto;
+}
+
+.menu a {
+    text-decoration: none;
+    color: inherit;
+    margin: 0 33px;
+}
+
+.menu a:hover {
+    color: chartreuse;
+}
+
+.banner {
+    height: 400px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .myName {
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.banner .myDescription {
+    margin-bottom: 30px;
+}
+
+.btn {
+    width: 190px;
+    height: 50px;
+    border-radius: 50px;
+    border: none;
+    background-color: chartreuse;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
 }
