--- a/static/app.css
+++ b/static/app.css
@@ -141,6 +141,12 @@ h2 {
     font-size: 30px;
     font-weight: 700;
     text-align: center;
+    margin: 30px 0;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 600;
 }
 
 /* layout */
@@ -160,8 +166,10 @@ h2 {
     height: 75px;
 }
 
-.logo {
+.logo a {
     font-weight: 700;
+    text-decoration: none;
+    color: inherit;
 }
 
 .logo span {
@@ -202,7 +210,94 @@ h2 {
     height: 50px;
     border-radius: 50px;
     border: none;
-    background-color: chartreuse;
     color: rgb(255, 255, 255);
     font-size: 16px;
+}
+
+.primary {
+    background-color: chartreuse;
+}
+
+.secondary {
+    background-color: rgb(8, 17, 0);
+}
+
+.about p {
+    margin-bottom: 10px;
+}
+
+.title span {
+    color: chartreuse;
+}
+
+.real {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+
+.real-item {
+    width: 300px;
+    border: 1px solid chartreuse;
+    padding: 15px;
+    margin: 10px;
+}
+
+.real-item h3 {
+    margin-bottom: 25px;
+}
+
+.real-item p:last-child {
+    margin: 25px 0;
+}
+
+.real-seemore-section {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.contact-section {
+    display: flex;
+}
+
+.contact-section .left {
+    width: 575px;
+    padding: 20px;
+}
+
+.contact-section .right {
+    width: 575px;
+}
+
+.contact-section .right img {
+    width: 100%;
+    height: auto;
+}
+
+.contact form {
+    margin-top: 20px;
+}
+
+.contact input {
+    width: 480px;
+    height: 40px;
+    margin: 10px 0;
+    padding: 0 10px;
+}
+
+.contact textarea {
+    max-width: 480px;
+    min-width: 480px;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+    height: 30px;
+    margin-top: 20px;
+    text-align: center;
 }
