--- a/presentation/templates/layout.html
+++ b/presentation/templates/layout.html
@@ -20,6 +20,7 @@
                 <a href="{% url 'home' %}#about" class="menu-item">about</a>
                 <a href="{% url 'home' %}#portfolio" class="menu-item">portfolio</a>
                 <a href="{% url 'contact' %}" class="menu-item">contact</a>
+                <a href="{% url 'observation' %}" class="menu-item">observation</a>
             </nav>
         </header>
     </div>
